add top background

--- a/src/styles/sass/abstracts/_variables.scss
+++ b/src/styles/sass/abstracts/_variables.scss
@@ -29,3 +29,5 @@ $color-neutral-dark-1: #67686a;
 $color-neutral-light-1: #b3b5b6;
 $color-neutral-light-2: #c9cacb;
 $color-neutral-light-3: #e9eaea;
+//////////////////////////////////
+$color-white: #fff;
