--- a/src/styles/sass/base/_reset.scss
+++ b/src/styles/sass/base/_reset.scss
@@ -3,3 +3,13 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+.bg-primary-dont-move {
+  width: 100%;
+  height: 90rem;
+  background: linear-gradient(180deg, $color-prmary 0%, $color-white 62.26%);
+  position: fixed;
+  z-index: -1000;
+  top: 0;
+  left: 0;
+}
