--- a/src/styles/sass/components/navbar/_logo.scss
+++ b/src/styles/sass/components/navbar/_logo.scss
@@ -2,7 +2,12 @@
   display: flex;
   align-items: center;
   &__image {
+    cursor: pointer;
     width: 7.2rem;
+  }
+  &__image:hover ~ &__text {
+    transform: translateX(-150%);
+    opacity: 0;
   }
   &__text {
     font-family: branding-black;
@@ -14,5 +19,7 @@
     );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    z-index: -1;
+    transition: all 0.5s;
   }
 }
