--- a/src/styles/sass/abstracts/_variables.scss
+++ b/src/styles/sass/abstracts/_variables.scss
@@ -31,3 +31,8 @@ $color-neutral-light-2: #c9cacb;
 $color-neutral-light-3: #e9eaea;
 //////////////////////////////////
 $color-white: #fff;
+$color-success: #40c057;
+///////////////////////////////////
+
+$color-theme-2: #ff6f61;
+$color-theme-3: #6667ab;
