--- a/src/styles/sass/base/_typography.scss
+++ b/src/styles/sass/base/_typography.scss
@@ -14,6 +14,18 @@
   font-family: "branding-med";
   src: url("./../../../fonts/BrandingSF-Medium.ttf");
 }
+@font-face {
+  font-family: "icomoon";
+  src: url("./../../../fonts/IcoMoon-Ultimate.ttf");
+  // src: url("./../../../fonts/icomoon.eot?-rdmvgc");
+  // src: url("./../../../fonts/icomoon.eot?#iefix-rdmvgc")
+  //     format("embedded-opentype"),
+  //   url("./../../../fonts/icomoon.woff?-rdmvgc") format("woff"),
+  //   url("./../../../fonts/icomoon.ttf?-rdmvgc") format("truetype"),
+  //   url("./../../../fonts/icomoon.svg?-rdmvgc#icomoon") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
 html {
   font-size: 62.5%;
   font-family: branding-med;
