--- a/src/styles/sass/components/navbar/_logo.scss
+++ b/src/styles/sass/components/navbar/_logo.scss
@@ -1,14 +1,30 @@
 .logo {
   display: flex;
   align-items: center;
+  position: relative;
   &__image {
-    cursor: pointer;
     width: 7.2rem;
   }
-  &__image:hover ~ &__text {
+  &:hover &__text {
     transform: translateX(-100%);
     opacity: 0;
   }
+  &:hover &__circles {
+    left: 8rem;
+  }
+  &:hover &__circles &__circles--circle {
+    width: 2.4rem;
+    height: 2.4rem;
+    opacity: 1;
+    visibility: visible;
+  }
+  &:hover &__circles &__circles--circle-2 {
+    transition-delay: 0.2s;
+  }
+  &:hover &__circles &__circles--circle-3 {
+    transition-delay: 0.4s;
+  }
+
   &__text {
     font-family: branding-black;
     font-size: 2.4rem;
@@ -21,5 +37,51 @@
     -webkit-text-fill-color: transparent;
     z-index: -1;
     transition: all 0.5s;
+  }
+  &__circles {
+    display: flex;
+    gap: 0.8rem;
+    position: absolute;
+    left: 0;
+    transition: all 0.5s;
+    &--circle {
+      border-radius: 50%;
+      border: 0.1rem solid rgba($color-prmary-dark-3, 0.3);
+      box-shadow: 0 0 0.8rem rgba($color-prmary-dark-3, 0.3);
+      cursor: pointer;
+      opacity: 0;
+      visibility: hidden;
+      height: 0;
+      width: 0;
+      &-active {
+        font-family: icomoon;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        &::after {
+          content: "\ed72";
+          font-size: 1rem;
+          color: $color-success;
+        }
+      }
+      &-1 {
+        background-color: $color-prmary;
+        transition: all 0.5s;
+      }
+      &-2 {
+        background-color: $color-theme-2;
+        transition: all 0.5s;
+        transition-delay: 0s;
+      }
+      &-3 {
+        background-color: $color-theme-3;
+        transition: all 0.5s;
+        transition-delay: 0s;
+      }
+      &:hover {
+        transform: translateY(-0.3rem);
+        transition-delay: 0s;
+      }
+    }
   }
 }
