--- a/src/styles/sass/abstracts/_variables.scss
+++ b/src/styles/sass/abstracts/_variables.scss
@@ -36,3 +36,6 @@ $color-success: #40c057;
 
 $color-theme-2: #ff6f61;
 $color-theme-3: #6667ab;
+
+//////////////////////////////////
+$translate-y-hover: -0.3;
