fix some bug in navbar

--- a/src/styles/sass/base/_reset.scss
+++ b/src/styles/sass/base/_reset.scss
@@ -16,6 +16,7 @@
 
 .header {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: 1fr 10fr 1fr;
   align-items: center;
+  justify-content: center;
 }
