--- a/src/styles/sass/components/navbar/_nav.scss
+++ b/src/styles/sass/components/navbar/_nav.scss
@@ -1,7 +1,8 @@
 .nav {
   &__list {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 8rem;
     list-style: none;
     &__item {
       transition: all 0.5s;
