--- a/src/styles/sass/components/hero/_hero-information.scss
+++ b/src/styles/sass/components/hero/_hero-information.scss
@@ -1,7 +1,16 @@
 .hero-information {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  flex: 0 0 20%;
-  gap: 1.6rem;
+  display: grid;
+  grid-template-rows: 8fr 1fr;
+  flex: 0 0 25%;
+  &__details {
+    display: flex;
+    flex-direction: column;
+    gap: 1.6rem;
+    align-self: center;
+  }
+  &__btns {
+    display: flex;
+    align-items: center;
+    gap: 3.2rem;
+  }
 }
