--- a/src/styles/sass/components/hero/_hero.scss
+++ b/src/styles/sass/components/hero/_hero.scss
@@ -3,4 +3,17 @@
   justify-content: space-between;
   align-items: center;
   margin-top: 3.2rem;
+  position: relative;
+  &__bg {
+    width: 90%;
+    height: 100%;
+    background: url("./../../../../images/hero-bg.png");
+    background-size: cover;
+    position: absolute;
+    z-index: map-get($z-index, herobackground);
+    margin-left: -2rem;
+    transform: rotate(15deg);
+    opacity: 0.6;
+    animation: hero-background-move 5s infinite linear alternate-reverse;
+  }
 }
