--- a/src/styles/sass/base/_reset.scss
+++ b/src/styles/sass/base/_reset.scss
@@ -7,8 +7,8 @@
 .bg-primary-dont-move {
   width: 100%;
   height: 90rem;
-  background: linear-gradient(180deg, $color-prmary 0%, $color-white 62.26%);
-  position: fixed;
+  background: linear-gradient(180deg, $color-prmary 0%, $color-white 40.5%);
+  position: absolute;
   z-index: map-get($z-index, "background");
   top: 0;
   left: 0;
