finish last-project bg

--- a/src/styles/sass/abstracts/_maps.scss
+++ b/src/styles/sass/abstracts/_maps.scss
@@ -2,4 +2,6 @@ $z-index: (
   "background": -10000,
   "herobackground": -9999,
   "featurebackground": -9998,
+  "lastbackground": -9997,
+  "lastbackgroundshapes": -9996,
 );
