finish last project information components

--- a/src/styles/sass/components/UI/_second-heading.scss
+++ b/src/styles/sass/components/UI/_second-heading.scss
@@ -5,4 +5,5 @@
   border-bottom: 0.2rem solid $color-accent-dark-2;
   padding-bottom: 0.4rem;
   text-transform: capitalize;
+  font-family: branding-black;
 }
