--- a/src/styles/sass/components/last-project/_last-project.scss
+++ b/src/styles/sass/components/last-project/_last-project.scss
@@ -46,4 +46,12 @@
       }
     }
   }
+  &__main {
+    padding: 1.6rem;
+    &__details {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 6.4rem;
+    }
+  }
 }
