finish education section

--- a/src/styles/sass/abstracts/_maps.scss
+++ b/src/styles/sass/abstracts/_maps.scss
@@ -4,4 +4,6 @@ $z-index: (
   "featurebackground": -9998,
   "lastbackground": -9997,
   "lastbackgroundshapes": -9996,
+  "educationline": -9995,
+  "educationitemcircle": -9994,
 );
