--- a/src/styles/sass/abstracts/_variables.scss
+++ b/src/styles/sass/abstracts/_variables.scss
@@ -31,6 +31,7 @@ $color-neutral-light-2: #c9cacb;
 $color-neutral-light-3: #e9eaea;
 //////////////////////////////////
 $color-white: #fff;
+$color-white-2: #f5f5f5;
 $color-success: #40c057;
 ///////////////////////////////////
 
