--- a/src/styles/sass/components/contact/_contact.scss
+++ b/src/styles/sass/components/contact/_contact.scss
@@ -1,3 +1,14 @@
 .contact {
   margin-top: 3.2rem;
+  &__details {
+    display: flex;
+    justify-content: space-between;
+    gap: 3.2rem;
+    &__inputs {
+      flex: 0 0 50%;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 3.2rem;
+    }
+  }
 }
