--- a/src/styles/sass/abstracts/_variables.scss
+++ b/src/styles/sass/abstracts/_variables.scss
@@ -33,6 +33,7 @@ $color-neutral-light-3: #e9eaea;
 $color-white: #fff;
 $color-white-2: #f5f5f5;
 $color-success: #40c057;
+$color-error: #fa5252;
 ///////////////////////////////////
 
 $color-theme-2: #ff6f61;
