--- a/src/styles/sass/components/contact/_contact-input.scss
+++ b/src/styles/sass/components/contact/_contact-input.scss
@@ -1,7 +1,7 @@
 .contact-input {
   display: flex;
   flex-direction: column;
-  &:last-child {
+  &:nth-child(3) {
     grid-column: 1/-1;
   }
   &__label {
