--- a/src/styles/sass/components/contact/_contact.scss
+++ b/src/styles/sass/components/contact/_contact.scss
@@ -4,11 +4,20 @@
     display: flex;
     justify-content: space-between;
     gap: 3.2rem;
-    &__inputs {
-      flex: 0 0 50%;
+    margin-top: 3.2rem;
+    &__form {
+      flex: 0 0 60%;
       display: grid;
       grid-template-columns: 1fr 1fr;
+      grid-template-rows: repeat(3, max-content);
       gap: 3.2rem;
+      &__button {
+        grid-row: 3/-1;
+        justify-self: start;
+        display: flex;
+        align-items: center;
+        gap: 0.8rem;
+      }
     }
   }
 }
