--- a/src/styles/sass/components/contact/_contact-info.scss
+++ b/src/styles/sass/components/contact/_contact-info.scss
@@ -1,4 +1,10 @@
 .contact-info {
+  flex: 0 0 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-start;
+
   &__details {
     display: flex;
     flex-direction: column;
@@ -18,6 +24,32 @@
       }
       &--value {
         color: rgba($color-accent-dark-3, 0.6);
+      }
+    }
+  }
+  &__works {
+    display: flex;
+    flex-direction: column;
+    gap: 1.6rem;
+    &__title {
+      font-size: 1.6rem;
+      color: $color-accent-dark-2;
+    }
+    &__logos {
+      display: flex;
+      gap: 1.6rem;
+
+      &--logo {
+        display: flex;
+        align-items: center;
+        gap: 1.6rem;
+        position: relative;
+
+        &--link {
+          width: 4rem;
+          height: 4rem;
+          transition: all 0.5s;
+        }
       }
     }
   }
