--- a/src/styles/sass/components/contact/_contact.scss
+++ b/src/styles/sass/components/contact/_contact.scss
@@ -3,7 +3,6 @@
   &__details {
     display: flex;
     justify-content: space-between;
-    gap: 3.2rem;
     margin-top: 3.2rem;
     &__form {
       flex: 0 0 60%;
@@ -17,6 +16,18 @@
         display: flex;
         align-items: center;
         gap: 0.8rem;
+        &--disabled {
+          cursor: not-allowed;
+          background-color: $color-prmary-light-2;
+          color: $color-prmary-dark-2;
+          & svg {
+            fill: $color-prmary-dark-2;
+          }
+          &:hover {
+            transform: translateY(0);
+            background-color: $color-prmary-light-2;
+          }
+        }
       }
     }
   }
