--- a/src/styles/sass/abstracts/_utilities.scss
+++ b/src/styles/sass/abstracts/_utilities.scss
@@ -12,3 +12,8 @@
     transform: translateX(-300%);
   }
 }
+.seprate-line {
+  width: 0.1rem;
+  height: 25rem;
+  background-color: rgba($color-neutral-light-3, 0.2);
+}
