finish footer section

--- a/src/styles/sass/abstracts/_variables.scss
+++ b/src/styles/sass/abstracts/_variables.scss
@@ -32,6 +32,7 @@ $color-neutral-light-3: #e9eaea;
 //////////////////////////////////
 $color-white: #fff;
 $color-white-2: #f5f5f5;
+$color-dark: #0a0a0b;
 $color-success: #40c057;
 $color-error: #fa5252;
 ///////////////////////////////////
