finish header responsive

--- a/src/styles/sass/abstracts/_maps.scss
+++ b/src/styles/sass/abstracts/_maps.scss
@@ -6,4 +6,7 @@ $z-index: (
   "lastbackgroundshapes": -9996,
   "educationline": -9995,
   "educationitemcircle": -9994,
+  /////////////////////////////
+  "menu": 10000,
+  "menu-icon": 10001,
 );
