--- a/src/styles/sass/components/navbar/_nav.scss
+++ b/src/styles/sass/components/navbar/_nav.scss
@@ -1,9 +1,108 @@
 .nav {
+  // width: 100%;
+  display: flex;
+  justify-content: center;
+  @include responsive(2xs) {
+    width: 100%;
+  }
+  &__menu {
+    display: none;
+    @include responsive("md") {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 20%;
+      height: 3rem;
+      border-radius: 10rem;
+      cursor: pointer;
+    }
+    @include responsive("xs") {
+      width: 40%;
+    }
+    @include responsive(2xs) {
+      // width: 100%;
+    }
+    &__primary {
+      background-color: $color-accent;
+    }
+    &__icon-open {
+      display: flex;
+      justify-content: center;
+      gap: 0.6rem;
+      align-items: center;
+      &--circle {
+        width: 1rem;
+        height: 1rem;
+        background-color: $color-white;
+        border-radius: 50%;
+        animation: go-up-and-down-logos 0.8s infinite linear alternate;
+        &:nth-child(2) {
+          animation-delay: 0.3s;
+        }
+      }
+    }
+    &__icon-close {
+      position: fixed;
+      width: 4rem;
+      height: 4rem;
+      border-radius: 50%;
+      right: 3.2rem;
+      background-color: $color-prmary;
+      z-index: map-get($z-index, menu-icon);
+      &--line {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 0.2rem;
+        height: 2rem;
+        border-radius: 10rem;
+        background-color: $color-white;
+        transform-origin: top;
+        &:first-child {
+          transform: rotate(45deg) translate(-50%, -50%);
+        }
+        &:nth-child(2) {
+          transform: rotate(-45deg) translate(-50%, -50%);
+        }
+      }
+    }
+    &__list {
+      list-style: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      gap: 6.4rem;
+      width: 100%;
+      height: 100vh;
+      background-color: rgba($color-accent, 0.5);
+      backdrop-filter: blur(3rem);
+      z-index: map-get($z-index, menu);
+      &__item {
+        &--link {
+          text-decoration: none;
+          color: $color-accent-dark-3;
+          font-size: 2rem;
+          font-family: branding-black;
+        }
+        &--active {
+          border-bottom: 0.4rem solid $color-prmary;
+          padding-bottom: 0.4rem;
+        }
+      }
+    }
+  }
   &__list {
     display: flex;
     justify-content: center;
     gap: 8rem;
     list-style: none;
+    @include responsive("md") {
+      display: none;
+    }
     &__item {
       transition: all 0.5s;
       &--active {
