--- a/src/styles/sass/base/_typography.scss
+++ b/src/styles/sass/base/_typography.scss
@@ -29,6 +29,30 @@
 html {
   font-size: 62.5%;
   font-family: branding-med;
+  @include responsive(2xl) {
+    font-size: 55%;
+  }
+  @include responsive(1xl) {
+    font-size: 50%;
+  }
+  @include responsive(xl) {
+    font-size: 45%;
+  }
+  @include responsive(lg) {
+    font-size: 40%;
+  }
+  @include responsive(md) {
+    font-size: 35%;
+  }
+  @include responsive(xs) {
+    font-size: 30%;
+  }
+  @include responsive(2xs) {
+    font-size: 25%;
+  }
+  @include responsive(3xs) {
+    font-size: 20%;
+  }
 }
 body {
   font-size: 1.6rem;
