--- a/src/styles/sass/components/hero/_hero-information.scss
+++ b/src/styles/sass/components/hero/_hero-information.scss
@@ -2,15 +2,32 @@
   display: grid;
   grid-template-rows: 8fr 1fr;
   flex: 0 0 25%;
+  @include responsive(2md) {
+    grid-column: 1/-1;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+
   &__details {
     display: flex;
     flex-direction: column;
     gap: 1.6rem;
     align-self: center;
+    @include responsive(sm) {
+      flex: 0 0 60%;
+    }
   }
   &__btns {
     display: flex;
     align-items: center;
     gap: 3.2rem;
+    &--icon {
+      fill: $color-accent-dark-2;
+      @include responsive(lg) {
+        width: 1.4rem;
+        height: 1.4rem;
+      }
+    }
   }
 }
