--- a/src/styles/sass/components/hero/_socialmedia.scss
+++ b/src/styles/sass/components/hero/_socialmedia.scss
@@ -2,10 +2,29 @@
   display: flex;
   flex-direction: column;
   gap: 2.4rem;
+  @include responsive(2md) {
+    justify-self: center;
+    grid-column: 1/-1;
+    grid-row: 2/3;
+    flex-direction: row;
+    gap: 4.8rem;
+  }
   & svg {
     fill: $color-tertiary-dark-3;
     cursor: pointer;
     transition: all 0.5s;
+    @include responsive(3xs) {
+      width: 2.4rem;
+      height: 2.4rem;
+    }
+    @include responsive(2xs) {
+      width: 2.7rem;
+      height: 2.7rem;
+    }
+    @include responsive(3xs) {
+      width: 2.4rem;
+      height: 2.4rem;
+    }
     &:hover {
       transform: translateY($translate-y-hover * 1rem);
     }
