--- a/src/styles/sass/components/last-project/_last-project.scss
+++ b/src/styles/sass/components/last-project/_last-project.scss
@@ -33,6 +33,9 @@
     }
     &--shapes {
       z-index: map-get($z-index, lastbackgroundshapes);
+      @include responsive(md) {
+        width: 10rem;
+      }
       &:first-child {
         position: absolute;
         right: 0;
