finish footer responsive

--- a/src/styles/sass/layouts/footer/_footer-buttom.scss
+++ b/src/styles/sass/layouts/footer/_footer-buttom.scss
@@ -30,6 +30,10 @@
       &__link {
         &--icon {
           fill: #fff;
+          @include responsive(2xs) {
+            width: 2.4rem;
+            height: 2.4rem;
+          }
         }
       }
     }
