--- a/src/styles/sass/abstracts/_utilities.scss
+++ b/src/styles/sass/abstracts/_utilities.scss
@@ -16,4 +16,8 @@
   width: 0.1rem;
   height: 25rem;
   background-color: rgba($color-neutral-light-3, 0.2);
+  @include responsive(sm) {
+    width: 100%;
+    height: 0.1rem;
+  }
 }
