--- a/src/styles/sass/components/navbar/_nav.scss
+++ b/src/styles/sass/components/navbar/_nav.scss
@@ -103,14 +103,29 @@
     }
     &__item {
       transition: all 0.5s;
-      &--active {
-        border-bottom: 0.4rem solid $color-accent;
-        padding-bottom: 0.4rem;
-      }
+      // &--active {
+      //   border-bottom: 0.4rem solid $color-accent;
+      //   padding-bottom: 0.4rem;
+      // }
       &--link {
         text-decoration: none;
         color: $color-prmary-dark-3;
         font-family: branding-black;
+        position: relative;
+        &::after {
+          content: "";
+          position: absolute;
+          width: 100%;
+          height: 0.4rem;
+          background-color: $color-accent;
+          bottom: -0.4rem;
+          left: 0;
+          transition: all 0.5s;
+          transform: scaleX(0);
+        }
+        &:hover::after {
+          transform: scaleX(1);
+        }
       }
       &:hover {
         transform: translateY($translate-y-hover * 1rem);
